--- a/app/views/invitations/index.html.erb
+++ b/app/views/invitations/index.html.erb
@@ -4,8 +4,8 @@
     <div class="column-middle">
       <% @my_invitations.each do |invitation| %>
         <% requester = User.find(invitation.user_id) %>
-        <div class="request">
-          <%= requester.full_name %>
+        <div class="request d-flex">
+          <%= render partial: "users/avatar_and_name", locals: { user: requester } %>
           <%= button_to "Accept", invitation_path(invitation.id, :response => "accepted", :invitation_id => invitation.id), method: :patch, class: "btn btn-primary" %>
           <%= button_to "Decline", invitation_path(invitation.id, :response => "declined", :invitation_id => invitation.id), method: :patch, class: "btn btn-danger" %>
         </div>
