--- a/app/views/posts/_post_footer.html.erb
+++ b/app/views/posts/_post_footer.html.erb
@@ -3,9 +3,9 @@
   <div>
     <% pre_like = post.likes.find { |like| like.user_id == current_user.id } %>
     <% if pre_like %>
-      <%= button_to "Unlike", post_like_path(post, pre_like), method: :delete %>
+      <%= button_to "Unlike", post_like_path(post, pre_like, path: path), method: :delete %>
     <% else %>
-      <%= button_to "Like", post_likes_path(post), method: :post %>
+      <%= button_to "Like", post_likes_path(post, path: path), method: :post %>
     <% end %>
   </div>
   <div class="flex-grow-1 post-like-count">
