--- a/app/views/posts/_post_header.html.erb
+++ b/app/views/posts/_post_header.html.erb
@@ -10,7 +10,7 @@
       </div>
       <% if post.user_id == current_user.id %>
         <%= link_to "edit", edit_post_path(post), method: :edit %>
-        <%= button_to "delete", post_path(post), method: :delete %>
+        <%= button_to "delete", post_path(post, path: path), method: :delete %>
       <% end %>
     </div>
     <div class="text-muted">
