--- a/app/views/invitations/show.html.erb
+++ b/app/views/invitations/show.html.erb
@@ -10,7 +10,7 @@
         </div>
       <% end %>
     <% else %>
-      <div>
+      <div class="d-flex flex-column align-items-center">
         <p class="fs-2">You haven't made any friends yet!</p>
         <%= link_to "Try finding some friends here!", users_path, class: "btn btn-success" %>
       </div>
