--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,11 @@
 
 <div class="position-absolute top-50 start-50 translate-middle">
-  Created by Brent Barnes as part of The Odin Project curriculum. View on Github.
+  <div class="d-flex flex-column align-items-center">
+    <div class="mb-2">
+      Created by Brent Barnes as part of <a href="https://www.theodinproject.com" target="_blank">The Odin Project</a> curriculum.<br>
+    </div>
+    <div>
+      View source code on <a href="https://github.com/BrentBarnes/Odin-Facebook" target="_blank">Github</a>.
+    </div>
+  </div>
 </div>
