--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,52 @@
-<h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<div class="position-absolute top-50 start-50 translate-middle">
+  <h2 class="text-center">Sign up</h2>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="form-outline mb-2">
+      <%= f.label :email, class: "hidden" %>
+      <%= f.email_field :email, placeholder: "Email Address", class: "p-1" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :full_name %><br />
-    <%= f.text_field :full_name %>
-  </div>
+    <div class="form-outline mb-2">
+      <%= f.label :full_name, class: "hidden" %>
+      <%= f.text_field :full_name, placeholder: "Full Name", class: "p-1" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+    <div class="form-outline mb-2">
+      <%= f.label :password, class: "hidden" %>
+      <% if @minimum_password_length %>
+      <em class="text-muted">(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %><br />
+      <%= f.password_field :password, placeholder: "Password", class: "p-1" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <div class="form-outline mb-2">
+      <%= f.label :password_confirmation, class: "hidden" %>
+      <%= f.password_field :password_confirmation, placeholder: "Password Confirmation", class: "p-1" %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+    <div class="actions d-grid gap-2 mb-2">
+      <%= f.submit "Sign up", class: "btn btn-primary" %>
+    </div>
+  <% end %>
 
-<%= render "devise/shared/links" %>
+  <%- if controller_name != 'sessions' %>
+    <%= link_to "Log in", new_session_path(resource_name), class: "btn btn-outline-primary d-grid gap-2" %><br />
+  <% end %>
+
+  <p class="text-center mb-2">or</p>
+  <%- if devise_mapping.omniauthable? %>
+    <%- resource_class.omniauth_providers.each do |provider| %>
+      <%= form_for "Login",
+        url: omniauth_authorize_path(resource_name, provider),
+        method: :post,
+        class: "text-center mb-2",
+        data: {turbo: "false"} do |f| %>
+          <%= f.submit "Login", type: "image", src: url_for("/assets/google/btn_google_signin_light_normal_web.png") %>
+      <% end %>
+    <% end %>
+  <% end %>
+  
+</div>
