--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,34 +1,37 @@
 
-<nav class="navbar navbar-expand-lg bg-light">
-  <div class="container-fluid">
-    <%= link_to "Hobbyist", root_path, class: "navbar-brand" %>
+<nav class="navbar navbar-expand-lg bg-primary px-4">
+  <div class="container-fluid d-flex justify-content-center">
+
+    <%= image_tag "icons/acorn.png" %>
+    <%= link_to "Chipper", root_path, class: "navbar-brand fs-4 text-white" %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <%= link_to "About", about_path, class: "nav-link" %>
+          <%= link_to "About", about_path, class: "nav-link fs-5" %>
         </li>
       </ul>
     </div>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <% if user_signed_in? %>
-          <div class="d-flex align-items-center">
-            <%= link_to user_path(current_user), class: "text-decoration-none text-secondary nav-profile", data: { turbo_frame: "middle-column"} do %>
-              <li class="nav-item text-dark fs-4">
-                <%= image_tag user_avatar(current_user), class: "rounded-circle avatar-extra-small" %>
-                <%= current_user.full_name %>
-              </li>
-            <% end %>
-              <li class="nav-item">
-                <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "btn btn-outline-danger" %>
-              </li>
-          </div>
-        <% end %>  
-        </li>
-      </ul>
+
+    <div class="me-5" id="navbarNav">
+      <% if user_signed_in? %>
+        <div class="d-flex align-items-center">
+          <%= link_to user_path(current_user), class: "text-decoration-none text-secondary nav-profile", data: { turbo_frame: "middle-column"} do %>
+            <li class="d-flex nav-item text-dark fs-5">
+              <%= image_tag user_avatar(current_user), class: "rounded-circle avatar-extra-small me-2" %>
+              <div class="text-white"><%= current_user.full_name %></div>
+            </li>
+          <% end %>
+        </div>
+      <% end %>  
+    </div>
+    <div>
+      <% if user_signed_in? %>
+          <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "btn btn-secondary" %>
+      <% end %>
     </div>
   </div>
 </nav>
