--- a/app/views/posts/_comments.html.erb
+++ b/app/views/posts/_comments.html.erb
@@ -4,20 +4,45 @@
     <hr class="my-2">
     <% @post.comments.each do |comment| %>
       <div class="card p-2 my-2">
-        <div class="d-flex">
-          <%= link_to comment.user.full_name, user_path(comment.user_id), class: "text-decoration-none flex-grow-1" %>
-          <% pre_like = comment.likes.find { |like| like.user_id == current_user.id } %>
-          <% if pre_like %>
-            <%= button_to "Unlike", comment_like_path(comment, pre_like), class: "comment-unlike-btn", method: :delete %>
-          <% else %>  
-            <%= button_to "Like", comment_likes_path(comment), class: "comment-like-btn", method: :post %>
+
+        <div class="d-flex mb-1">
+          <%= link_to user_path(@post.user), class: "text-decoration-none flex-grow-1", data: { turbo_frame: "middle-column"} do %>
+            <div class="pt-2 d-flex align-items-center">
+              <%= image_tag user_avatar(@post.user), class: "rounded-circle avatar-extra-small me-2" %>
+              <div class="fs-6"><%= @post.user.full_name %></div>
+            </div>
           <% end %>
-          <div class="comment-like-count"><%= comment.likes.count %></div>
+
           <% if comment.user_id == current_user.id %>
-            <%= button_to "delete", post_comment_path(@post, comment), method: :delete %>
+            <%= link_to post_comment_path(@post, comment), data: { turbo_method: :delete } do %>
+              <i class="fa-regular fa-trash-can fa-lg"></i>
+            <% end %>
           <% end %>
         </div>
-        <%= comment.comment_content %>
+
+        <div class="mb-1 ps-5">
+          <%= comment.comment_content %>
+        </div>
+
+        <div class="d-flex">
+          <div>
+            <% pre_like = comment.likes.find { |like| like.user_id == current_user.id } %>
+            <% if pre_like %>
+              <%= link_to comment_like_path(comment, pre_like), class: "comment-unlike-btn", data: { turbo_method: :delete } do %>
+                <i class="fa-solid fa-thumbs-up fa-lg"></i>
+              <% end %>
+            <% else %>
+              <%= link_to comment_likes_path(comment), class: "comment-like-btn", data: { turbo_method: :post } do %>
+                <i class="fa-regular fa-thumbs-up fa-lg"></i>
+              <% end %>
+            <% end %>
+          </div>
+          
+          <div class="comment-like-count ps-2">
+            <%= comment.likes.count %>
+          </div>
+        </div>
+
       </div>
     <% end %>
   <% end %>
