--- a/app/views/posts/_post_card.html.erb
+++ b/app/views/posts/_post_card.html.erb
@@ -1,10 +1,18 @@
 
 <% posts.each do |post| %>
-  <div class="post shadow shadow-intensity-xl mt-3">
-    <%= render partial: "posts/post_header", locals: { post: post, path: path } %>
-    <hr class="my-2">
-    <%= render partial: "posts/post_content", locals: { post: post } %>
-    <hr class="my-2">
-    <%= render partial: "posts/post_footer", locals: { post: post, path: path } %>
+  <div class="card bg-light mt-3">
+
+    <div class="card-header">
+      <%= render partial: "posts/post_header", locals: { post: post } %>
+    </div>
+
+    <div class="card-body">
+      <%= render partial: "posts/post_content", locals: { post: post } %>
+    </div>
+
+    <div class="card-footer">
+      <%= render partial: "posts/post_footer", locals: { post: post } %>
+    </div>
+
   </div>
 <% end %>
