--- a/app/views/posts/_post_header.html.erb
+++ b/app/views/posts/_post_header.html.erb
@@ -1,20 +1,30 @@
 
-<div class="d-flex">
-  <%= link_to user_path(post.user), class: "post-avatar", data: { turbo_frame: "middle-column"} do %>
-    <%= image_tag user_avatar(post.user), class: "rounded-circle avatar-small" %>
-  <% end %>
-  <div class="d-flex flex-column flex-grow-1">
-    <div class="d-flex">
-      <div class="flex-grow-1">
+<div class="post-header d-flex">
+  <div>
+    <%= link_to user_path(post.user), class: "post-avatar", data: { turbo_frame: "middle-column"} do %>
+      <%= image_tag user_avatar(post.user), class: "rounded-circle avatar-small" %>
+    <% end %>
+  </div>
+
+  <div class="flex-grow-1 ms-2">
+    <div class="d-flex flex-column">
+      <div>
         <%= link_to post.user.full_name, user_path(post.user_id), class: "text-decoration-none post-name" %>
       </div>
-      <% if post.user_id == current_user.id %>
-        <%= link_to "edit", edit_post_path(post), method: :edit %>
-        <%= button_to "delete", post_path(post, path: path), method: :delete %>
+      <div class="text-muted">
+        <%= post.created_at.strftime("%B %e %Y") %>
+      </div>
+    </div>
+  </div>
+  
+  <div class="d-flex">
+    <% if post.user_id == current_user.id %>
+      <%= link_to edit_post_path(post), class: "pe-2", method: :edit, data: { turbo_frame: "edit-text-box"} do %>
+        <i class="fa-regular fa-pen-to-square fa-lg"></i>
       <% end %>
-    </div>
-    <div class="text-muted">
-      <%= post.created_at.strftime("%B %e %Y") %>
-    </div>
+      <%= link_to post_path(post), data: { turbo_method: :delete } do %>
+        <i class="fa-regular fa-trash-can fa-lg"></i>
+      <% end %>
+    <% end %>
   </div>
 </div>
