--- a/app/views/posts/_text_box.html.erb
+++ b/app/views/posts/_text_box.html.erb
@@ -1,7 +1,13 @@
 
-<%= form_with model: model, url: url, scope: scope do |form| %>
-  <%= form.hidden_field :user_id, value: current_user.id %>
-  <%= form.text_area content, placeholder: placeholder, class: "post-box" %>
-  <%= form.submit "Post", class: "btn btn-primary post-button" %>
-<% end %>
+<div>
+  <%= form_with model: model, class: "d-flex", url: url, scope: scope do |form| %>
+    <div class="flex-grow-1">
+      <%= form.hidden_field :user_id, value: current_user.id %>
+      <%= form.text_area content, placeholder: placeholder, class: "post-box shadow shadow-primary shadow-intensity-lg px-3" %>
+    </div>
+    <div>
+      <%= form.submit "Post", class: "text-submit shadow shadow-primary shadow-intensity-lg" %>
+    </div>
+  <% end %>
+</div>
         
