--- a/app/views/users/_avatar_and_name.html.erb
+++ b/app/views/users/_avatar_and_name.html.erb
@@ -1,7 +1,7 @@
 
-<%= link_to user_path(user), class: "text-decoration-none text-secondary", data: { turbo_frame: "middle-column"} do %>
-  <div class="px-3 pt-3">
-    <%= image_tag user_avatar(user), class: "rounded-circle avatar-small" %>
-    <%= user.full_name %>
+<%= link_to user_path(user), class: "text-decoration-none", data: { turbo_frame: "middle-column"} do %>
+  <div class="px-4 pt-2 d-flex align-items-center">
+    <%= image_tag user_avatar(user), class: "rounded-circle avatar-small me-2" %>
+    <div class="fs-4"><%= user.full_name %></div>
   </div>
 <% end %>
