--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,13 @@
 
 <%= turbo_frame_tag "middle-column" do %>
-  <div>
+  <div class="column-middle">
     <% User.not_friends(current_user).each do |user| %>
-      <div class="d-flex">
+      <div class="d-flex align-items-center">
         <%= render partial: "users/avatar_and_name", locals: { user: user } %>
         <% if Invitation.reacted?(current_user.id, user) %>
-          <button type="button" class="btn btn-secondary">Request Pending</button>
+          <div class="request mt-2">
+            Request Pending
+          </div>
         <% else %>
           <%= button_to "Add Friend", invitations_path(:user => user), class: "btn btn-primary" %>
         <% end %>
