--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,21 +17,25 @@
           <div class="d-flex flex-column">
             <% if @user.location %>
               <div>
+                <i class="fa-solid fa-map-location-dot"></i>
                 <%= @user.location %>
               </div>
             <% end %>
             <% if @user.education %>
               <div>
+                <i class="fa-solid fa-school"></i>
                 <%= @user.education %>
               </div>
             <% end %>
             <% if @user.occupation %>
               <div>
+                <i class="fa-solid fa-briefcase"></i>
                 <%= @user.occupation %>
               </div>
             <% end %>
             <% if @user.birthday %>
               <div>
+                <i class="fa-solid fa-cake-candles"></i>
                 <%= @user.birthday.strftime("%B %d, %Y") %>
               </div>
             <% end %>
@@ -53,7 +57,73 @@
       </div>
     </div>
     <div>
-      <%= render partial: "static_pages/user_posts", locals: { user: @user, path: user_posts_path(current_user.id) } %>
+      <%# <%= render partial: "static_pages/user_posts", locals: { user: @user, path: user_posts_path(current_user.id) } %>
+
+    <% @user_posts.each do |post| %>
+      <div class="card bg-light mt-3">
+
+        <div class="card-header">
+          <div class="post-header d-flex">
+            <div>
+              <%= link_to user_path(post.user), class: "post-avatar", data: { turbo_frame: "middle-column"} do %>
+                <%= image_tag user_avatar(post.user), class: "rounded-circle avatar-small" %>
+              <% end %>
+            </div>
+
+            <div class="flex-grow-1 ms-2">
+              <div class="d-flex flex-column">
+                <div>
+                  <%= link_to post.user.full_name, user_path(post.user_id), class: "text-decoration-none post-name" %>
+                </div>
+                <div class="text-muted">
+                  <%= post.created_at.strftime("%B %e %Y") %>
+                </div>
+              </div>
+            </div>
+            
+            <div class="d-flex">
+              <% if post.user_id == current_user.id %>
+                <%= link_to edit_post_path(post, view: "user#show"), class: "pe-2", method: :edit, data: { turbo_frame: "edit-text-box"} do %>
+                  <i class="fa-regular fa-pen-to-square fa-lg"></i>
+                <% end %>
+                <%= link_to post_path(post, view: "user#show"), data: { turbo_method: :delete } do %>
+                  <i class="fa-regular fa-trash-can fa-lg"></i>
+                <% end %>
+              <% end %>
+            </div>
+          </div>
+        </div>
+
+        <div class="card-body">
+          <%= render partial: "posts/post_content", locals: { post: post } %>
+        </div>
+
+        <div class="card-footer">
+          <div class="post-footer d-flex">
+            <div>
+              <% pre_like = post.likes.find { |like| like.user_id == current_user.id } %>
+              <% if pre_like %>
+                <%= link_to post_like_path(post, pre_like, view: "user#show"), data: { turbo_method: :delete } do %>
+                  <i class="fa-solid fa-thumbs-up fa-lg"></i>
+                <% end %>
+              <% else %>
+                <%= link_to post_likes_path(post, view: "user#show"), data: { turbo_method: :post } do %>
+                  <i class="fa-regular fa-thumbs-up fa-lg"></i>
+                <% end %>
+              <% end %>
+            </div>
+            <div class="flex-grow-1 post-like-count ps-2">
+              <%= post.likes.count %>
+            </div>
+            <div>
+              <%= link_to "Comment (#{post.comments.count})", post_path(post), class: "text-decoration-none" %>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    <% end %>
+
     </div>
   </div>
 <% end %>
