trying to add unique ids for turbo frames

--- a/app/views/likes/index.html.erb
+++ b/app/views/likes/index.html.erb
@@ -26,7 +26,7 @@
               
               <div class="d-flex">
                 <% if post.user_id == current_user.id %>
-                  <%= link_to edit_post_path(post, view: "likes#index"), class: "pe-2", method: :edit, data: { turbo_frame: "edit-text-box"} do %>
+                  <%= link_to edit_post_path(post, view: "likes#index"), class: "pe-2", method: :edit, data: { turbo_frame: "edit-text-box", post: post} do %>
                     <i class="fa-regular fa-pen-to-square fa-lg"></i>
                   <% end %>
                   <%= link_to post_path(post, view: "likes#index"), data: { turbo_method: :delete } do %>
@@ -38,7 +38,7 @@
           </div>
           
           <div class="card-body">
-            <%= turbo_frame_tag "edit-text-box" do %>
+            <%= turbo_frame_tag dom_id(post, "text_edit_box") do %>
               <%= post.post_content %>
             <% end %>
           </div>
