Added seeding for users, invitations, and posts

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -3,7 +3,7 @@
   <div class="container-fluid d-flex justify-content-center">
 
     <%= image_tag "icons/acorn.png" %>
-    <%= link_to "Chipper", root_path, class: "navbar-brand fs-4 text-white" %>
+    <%= link_to "Chipper", posts_path, class: "navbar-brand fs-4 text-white" %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
