--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" type="image/png" href="assets/icons/acorn.png">
+    <%# <link rel="icon" type="image/png" href="assets/icons/acorn.png"> %>
     <title>Chipper</title>
     <script src="https://kit.fontawesome.com/0eff1f1b99.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1">
