Got all test to pass but one. Need to fix editing posts.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <%# <link rel="icon" type="image/png" href="assets/icons/acorn.png"> %>
     <title>Chipper</title>
     <script src="https://kit.fontawesome.com/0eff1f1b99.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -11,6 +10,7 @@
     <%= stylesheet_link_tag "custom", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <%= favicon_link_tag asset_path('icons/acorn.png') %>
   </head>
 
   <body>
