Fixing post turbo frames

--- a/app/views/posts/_text_box.html.erb
+++ b/app/views/posts/_text_box.html.erb
@@ -1,13 +1,15 @@
 
-<div>
-  <%= form_with model: model, class: "d-flex", url: url, scope: scope do |form| %>
-    <div class="flex-grow-1">
-      <%= form.hidden_field :user_id, value: current_user.id %>
-      <%= form.text_area content, placeholder: placeholder, class: "post-box shadow shadow-primary shadow-intensity-lg px-3" %>
-    </div>
-    <div>
-      <%= form.submit "Post", class: "text-submit shadow shadow-primary shadow-intensity-lg" %>
-    </div>
-  <% end %>
-</div>
+<%= turbo_frame_tag "edit-text-box" do %>
+  <div>
+    <%= form_with model: model, class: "d-flex", url: url, scope: scope do |form| %>
+      <div class="flex-grow-1">
+        <%= form.hidden_field :user_id, value: current_user.id %>
+        <%= form.text_area content, placeholder: placeholder, class: "post-box shadow shadow-primary shadow-intensity-lg px-3" %>
+      </div>
+      <div>
+        <%= form.submit "Post", class: "text-submit shadow shadow-primary shadow-intensity-lg" %>
+      </div>
+    <% end %>
+  </div>
+<% end %>
         
