--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -3,7 +3,7 @@
   <div class="column-middle">
     <%= turbo_frame_tag dom_id(@post, "edit-text-box") do %>
       <%= render partial: "posts/text_box", locals: { model: @post, url: post_path(@post), 
-      scope: false, content: :post_content, placeholder: "" } %>
+      scope: false, content: :post_content, placeholder: "", post: @post } %>
     <% end %>
   </div>
 <% end %>
