updates for heroku deployment

--- a/app/views/posts/_post_content.html.erb
+++ b/app/views/posts/_post_content.html.erb
@@ -1,4 +1,4 @@
 
-<%= turbo_frame_tag dom_id(post, "edit-text-box") do %>
+<%= turbo_frame_tag "edit-text-box" do %>
   <%= post.post_content %>
 <% end %>
