--- a/app/views/posts/_text_box.html.erb
+++ b/app/views/posts/_text_box.html.erb
@@ -1,5 +1,5 @@
 
-<%= turbo_frame_tag "edit-text-box" do %>
+<%# <%= turbo_frame_tag "edit-text-box" do %> %>
   <div>
     <%= form_with model: model, class: "d-flex", url: url, scope: scope do |form| %>
       <div class="flex-grow-1">
@@ -11,5 +11,5 @@
       </div>
     <% end %>
   </div>
-<% end %>
+<%# <% end %> %>
         
