--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -2,8 +2,18 @@
 <%= turbo_frame_tag "middle-column" do %>
   <div class="column-middle">
     <%= turbo_frame_tag dom_id(@post, "edit-text-box") do %>
-      <%= render partial: "posts/text_box", locals: { model: @post, url: post_path(@post), 
-      scope: false, content: :post_content, placeholder: "", post: @post } %>
+      <div>
+        <%= form_with model: @post, class: "d-flex", url: post_path(@post) do |form| %>
+          <div class="flex-grow-1">
+            <%= form.hidden_field :user_id, value: current_user.id %>
+            <%= form.text_area :post_content, placeholder: "Edit your post", class: "post-box shadow shadow-primary shadow-intensity-lg px-3" %>
+          </div>
+          <div>
+            <%= form.submit "Post", class: "text-submit shadow shadow-primary shadow-intensity-lg" %>
+          </div>
+        <% end %>
+      </div>
     <% end %>
+
   </div>
 <% end %>
