--- a/app/views/posts/_comments.html.erb
+++ b/app/views/posts/_comments.html.erb
@@ -9,7 +9,7 @@
           <%= link_to user_path(@post.user), class: "text-decoration-none flex-grow-1", data: { turbo_frame: "middle-column"} do %>
             <div class="pt-2 d-flex align-items-center">
               <%= image_tag user_avatar(@post.user), class: "rounded-circle avatar-extra-small me-2" %>
-              <div class="fs-6"><%= @post.user.full_name %></div>
+              <div class="fs-6"><%= current_user.full_name %></div>
             </div>
           <% end %>
 
